当不存在匹配的data时，自动删除模板中的数据字段

--- a/test/page.html
+++ b/test/page.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <link rel="import" href="./widget.html?__inline" data="{attr:'hello',attr2:'world'}">
+    <link rel="import" href="./widget.html?__inline" data="{attr:'hello'}">
+    <link rel="import" href="./widget.html?__inline" data="{a:'hello'}">
+    <link rel="import" href="./widget.html?__inline">
 </body>
 </html>
